# system-notes

./: .dockerignore  .gcloudignore  .gitignore  .gitleaks.toml  .lighthouserc.json  .prettierignore  .release-please-manifest.json  .secrets.baseline  .semgrepignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY_RULES.md  algolia-requirements.md  algolia_crawler_deploy.sh  algolia_upload.sh  analyze_full_lighthouse.py  cloudbuild.yaml  cloudbuild_tmp.yaml  commitlint.config.mjs  debug_env.sh  debug_env_out.txt  deploy.sh  eslint.config.mjs  lefthook.yml  lighthouserc.desktop.json  lighthouserc.json  lighthouserc.mobile.json  multiregion_deploy.sh  next.config.ts  package-lock.json  package.json  playwright.config.ts  release-please-config.json  ruckus2.0.md  sonar-project.properties  (+8 more)
.github/: dependabot.yml
apps/api/: .coverage  .dockerignore  .gcloudignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  about_ashley.md  deploy.sh  main.py  package.json  project_narratives.md  projects_data.md  pyproject.toml  system_prompt.md
apps/api/algolia/: AGENTS.md  README.md  README.md.head  algolia_prompt.md  suggestions_prompt.md  system_docs.json  system_docs_settings.json
apps/api/algolia/about/: about-settings.json  about.test.js  index.json
apps/api/data/: projects.json
apps/api/indices/: about.json  projects.json
apps/api/prompts/: about_ashley.md  algolia_prompt.md  portfolio_canon.md  projects.md  system_prompt.md
apps/api/scripts/: build_knowledge_graph.py  delete_algolia_indices.py  index_algolia.py  update_agent_config.py
apps/api/tests/: conftest.py  test_about.py  test_chat.py  test_chat_rag.py  test_main.py  test_projects.py  test_system_docs.py
(+299 files in other folders)
