[project]
name = "api"
version = "1.2.0"
description = "System Notes API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.40.0",
    "python-dotenv>=1.0.0",
    "algoliasearch>=4.35.4",
    "werkzeug>=3.1.5",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
addopts = "--cov=main --cov-report=term-missing --cov-fail-under=85"
