[project]
name = "api"
version = "1.2.0"
description = "System Notes API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.40.0",
    "python-dotenv>=1.2.2",
    "algoliasearch>=4.35.4",
    "werkzeug>=3.1.5",
    "httpx>=0.27.0",
    "defusedxml>=0.7.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
addopts = "--cov=main --cov-report=term-missing --cov-report=xml:coverage.xml --cov-report=html --cov-fail-under=85"
